Replace links to SpringSource with spring.io.

--- a/_sample-pages/project.html
+++ b/_sample-pages/project.html
@@ -10,27 +10,23 @@ badges:
   # Customize your project's badges. Delete any entries that do not apply.
   custom:
     - name: Source (GitHub)
-      url:  https://github.com/spring-projects/spring-data-jpa
+      url:  https://github.com/spring-projects/spring-data-mongodb
       icon: github
 
     - name: Issues (JIRA)
-      url:  http://jira.springsource.org/browse/DATAJPA
+      url:  http://jira.spring.io.org/browse/DATAMONGO
       icon: tracking
 
     - name: CI (Bamboo)
-      url:  https://build.springsource.org/browse/SPRINGDATAJPA
+      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGO
       icon: ci
 
-    - name: Forum
-      url:  http://forum.spring.io/forum/spring-projects/data
-      icon: forum
-
     - name: StackOverflow
-      url:  http://stackoverflow.com/questions/tagged/spring-data-jpa
+      url:  http://stackoverflow.com/questions/tagged/spring-data-mongodb
       icon: stackoverflow
 
     - name: Metrics (SonarQube)
-      url:  https://sonar.springsource.org/dashboard/index/org.springframework.data:spring-data-jpa
+      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGOSONAR
       icon: metrics
 
 ---
