--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@ badges:
       icon: github
 
     - name: Issues (JIRA)
-      url:  https://jira.springframework.org/browse/DATAMONGO
+      url:  https://jira.spring.io/browse/DATAMONGO
       icon: tracking
 
     - name: CI (Bamboo)
-      url:  https://build.springsource.org/browse/SPRINGDATAMONGODB-MONGO
+      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGO
       icon: ci
 
     - name: StackOverflow
-      url:  http://stackoverflow.com/questions/tagged/spring+mongodb
+      url:  https://stackoverflow.com/questions/tagged/spring-data-mongodb
       icon: stackoverflow
 
     - name: Metrics (SonarQube)
-      url:  https://build.springsource.org/browse/SPRINGDATAMONGODB-MONGOSONAR
+      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGOSONAR
       icon: metrics
 
 ---
@@ -53,8 +53,8 @@ The Spring Data MongoDB project provides integration with the MongoDB document d
 
 ## Features
 
-* Spring configuration support using Java based @Configuration classes or an XML namespace for a Mongo driver instance and replica sets.
-* MongoTemplate helper class that increases productivity performing common Mongo operations. Includes integrated object mapping between documents and POJOs.
+* Spring configuration support using Java based `@Configuration` classes or an XML namespace for a Mongo driver instance and replica sets.
+* `MongoTemplate` helper class that increases productivity performing common Mongo operations. Includes integrated object mapping between documents and POJOs.
 * Exception translation into Spring's portable Data Access Exception hierarchy
 * Feature Rich Object Mapping integrated with Spring's Conversion Service
 * Annotation based mapping metadata but extensible to support other metadata formats
@@ -62,12 +62,10 @@ The Spring Data MongoDB project provides integration with the MongoDB document d
 * Low-level mapping using MongoReader/MongoWriter abstractions
 * Java based Query, Criteria, and Update DSLs
 * Automatic implementation of Repository interfaces including support for custom finder methods.
-* QueryDSL integration to support type-safe queries.
+* Querydsl integration to support type-safe queries.
 * Cross-store persistance - support for JPA Entities with fields transparently persisted/retrieved using MongoDB
-* Log4j log appender
 * GeoSpatial integration
 * Map-Reduce integration
-* JMX administration and monitoring
 * CDI support for repositories
 * GridFS support
 
@@ -83,7 +81,7 @@ The Spring Data MongoDB project provides integration with the MongoDB document d
 
 ### Sample Projects
 
-* [Spring Data Book](https://github.com/springsource/spring-data-book)
+* [Spring Data Book](https://github.com/spring-projects/spring-data-book)
 
 ### Getting Started Guides
 
