--- a/index.html
+++ b/index.html
@@ -1,97 +1,11 @@
----
-layout: base_layout
-
-# The name of your project
-title: Spring Data MongoDB
-
-badges:
-
-  # Specify your project's twitter handle, if any. Delete if none.
-  twitter: SpringData
-
-  # Customize your project's badges. Delete any entries that do not apply.
-  custom:
-    - name: Source (GitHub)
-      url:  https://github.com/spring-projects/spring-data-mongodb
-      icon: github
-
-    - name: Issues (JIRA)
-      url:  https://jira.spring.io/browse/DATAMONGO
-      icon: tracking
-
-    - name: CI (Bamboo)
-      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGO
-      icon: ci
-
-    - name: StackOverflow
-      url:  https://stackoverflow.com/questions/tagged/spring-data-mongodb
-      icon: stackoverflow
-
-    - name: Metrics (SonarQube)
-      url:  https://build.spring.io/browse/SPRINGDATAMONGODB-MONGOSONAR
-      icon: metrics
-
----
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en-US">
-
-<!-- Specify the parent of this project (or delete if none) to influence the rendering of the breadcrumb -->
-{% capture parent_link %}
-[Spring Data]({{ site.projects_site_url }}/spring-data)
-{% endcapture %}
-
-
-{% capture billboard_description %}
-Spring Data for [MongoDB](http://www.mongodb.org/) is part of the umbrella Spring Data project which aims to provide a familiar and consistent Spring-based programming model for new datastores while retaining store-specific features and capabilities. 
-{% endcapture %}
-
-{% capture main_content %}
-
-## Introduction
-
-The Spring Data MongoDB project provides integration with the MongoDB document database. Key functional areas of Spring Data MongoDB are a POJO centric model for interacting with a MongoDB DBCollection and easily writing a Repository style data access layer.
-
-## Features
-
-* Spring configuration support using Java based `@Configuration` classes or an XML namespace for a Mongo driver instance and replica sets.
-* `MongoTemplate` helper class that increases productivity performing common Mongo operations. Includes integrated object mapping between documents and POJOs.
-* Exception translation into Spring's portable Data Access Exception hierarchy
-* Feature Rich Object Mapping integrated with Spring's Conversion Service
-* Annotation based mapping metadata but extensible to support other metadata formats
-* Persistence and mapping lifecycle events
-* Low-level mapping using MongoReader/MongoWriter abstractions
-* Java based Query, Criteria, and Update DSLs
-* Automatic implementation of Repository interfaces including support for custom finder methods.
-* Querydsl integration to support type-safe queries.
-* Cross-store persistance - support for JPA Entities with fields transparently persisted/retrieved using MongoDB
-* GeoSpatial integration
-* Map-Reduce integration
-* CDI support for repositories
-* GridFS support
-
-<span id="quick-start"></span>
-
-## Quick Start
-
-{% include download_widget.md %}
-
-{% endcapture %}
-
-{% capture related_resources %}
-
-### Sample Projects
-
-* [Spring Data Book](https://github.com/spring-projects/spring-data-book)
-
-### Getting Started Guides
-
-* [Accessing Data with Mongo]({{site.main_site_url}}/guides/gs/accessing-data-mongo)
-
-### Presentations
-
-* [Data Access 2.0? Please welcome: Spring Data!](https://speakerdeck.com/olivergierke/data-access-2-dot-0-please-welcome-spring-data-2)
-
-{% endcapture %}
-
-{% include project_page.html %}
+  <meta charset="utf-8">
+  <title>Redirecting&hellip;</title>
+  <link rel="canonical" href="http://spring.io/projects/spring-data-mongodb">
+  <meta http-equiv="refresh" content="0; url=http://spring.io/projects/spring-data-mongodb">
+  <meta name="robots" content="noindex">
+  <h1>Redirecting&hellip;</h1>
+  <a href="http://spring.io/projects/spring-data-mongodb">Click here if you are not redirected.</a>
+  <script>location="http://spring.io/projects/spring-data-mongodb"</script>
 </html>
